# libuserfile_econf

./: README.md  meson.build
include/: usershell_econf.h
src/: .#hosts.c  libusershell_econf.map  usershell.c
tests/: meson.build  tst-checkusershell.c  tst-getusershell1.c  tst-getusershell2.c
